--- a/android/build.gradle
+++ b/android/build.gradle
@@ -27,7 +27,7 @@ android {
         versionName "1.0"
             javaCompileOptions {
                 annotationProcessorOptions {
-                includeCompileClasspath = false
+                // includeCompileClasspath = false
             }
         }
     }
